security-platform/vulnerability-management/defectdojo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: defectdojo
  labels:
    app.kubernetes.io/name: defectdojo
    app.kubernetes.io/part-of: security-platform
    pod-security.kubernetes.io/enforce: restricted  # Pod Security Admission (PSA) 
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
